pass the title instead of only the location

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
         <meta name="keywords" content="hi-tech, Israel" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="stylesheet" href="/style.css">
-        <title>Hi-tech companies in Israel</title>
+        <title>{{title}}</title>
 </head>
 <body>
 
-<h1>Hi-tech companies in {{ location }}</h1>
+<h1></h1>
 
 Total number of companies: <span>{{ companies | count }}</span>
 <div id="list">
