--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<h1></h1>
+    <h1>{{title}}</h1>
 
 Total number of companies: <span>{{ companies | count }}</span>
 <div id="list">
