--- a/templates/area.html
+++ b/templates/area.html
@@ -6,11 +6,11 @@
         <meta name="keywords" content="hi-tech, Israel" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="stylesheet" href="/style.css">
-        <title>Hi-tech companies in Israel</title>
+        <title>{{title}}</title>
 </head>
 <body>
 
-<h1>Areas in Israel</h1>
+    <h1>{{title}}</h1>
 
 <div id="list">
 <ul>
