--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,4 @@
-<!DOCTYPE HTML>
-<html lang="en">
-<head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <meta name="description" content="Hi-tech companies in Israel" />
-        <meta name="keywords" content="hi-tech, Israel" />
-        <link rel="shortcut icon" href="/favicon.ico" />
-        <link rel="stylesheet" href="/style.css">
-        <title>{{title}}</title>
-</head>
-<body>
-
-    <h1>{{title}}</h1>
+{% include 'incl/header.html' %}
 
 Total number of companies: <span>{{ companies | count }}</span>
 <div id="list">
@@ -22,9 +10,5 @@ Total number of companies: <span>{{ companies | count }}</span>
 </div>
 
 
+{% include 'incl/footer.html' %}
 
-<hr>
-Data is available in <a href="https://github.com/szabgab/silicon-wadi">this GitHub</a> repository. Pull-Requests are welcome!
-
-</body>
-</html>
