--- a/templates/incl/header.html
+++ b/templates/incl/header.html
@@ -9,6 +9,8 @@
         <title>{{title}}</title>
 </head>
 <body>
+    <a href="/">home</a> | <a href="/area/">Areas</a>
+    <hr>
 
     <h1>{{title}}</h1>
 
